--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html>
+<head>    
+    <title>Hafsa Eskiyurt</title>
 </head>
 <body>
-    
+    <h1>Hafsa Eskiyurt</h1> <!--H1 kullandım çünkü en büyük olmasını istediğim başlık bu.-->
+
+    <h3>Hakkımda</h3> 
+    <p>Merhaba, ben Hafsa Eskiyurt. 9. sınıf öğrencisiyim. Web geliştirme ve girişimcilikle ilgileniyorum. </p>
+
+    <h2>Sevdiğim Kitaplar</h2>
+    <h4>Martin Eden</h4> <!--H4 kullandım çünkü sevdiğim kitaplar başlığıyla aynı büyüklükte olsun istemiyorum-->
+    <p>Jack London tarafından yazılmış, sınıflar arası farklılıkları, ayrımcılıkları ve sosyal hayatı anlatan bir kitap.</p> <!--Paragraf eklemek için <p> etiketini kullandım-->
+
+    <p>Bu kitap çok güzel bir başarı hikayesi aslında. Ana karakter Martin Eden, ne yaşarsa yaşasın asla pes etmez ve hep daha iyisini yapmaya çalışır. Kitabın sonu asla tahmin edemeyeceğiniz şekilde bitiyor. </p>
 </body>
 </html>
