Proje içeriği değiştirildi

--- a/index.html
+++ b/index.html
@@ -3,16 +3,44 @@
 <head>    
     <title>Hafsa Eskiyurt</title>
 </head>
+
 <body>
     <h1>Hafsa Eskiyurt</h1> <!--H1 kullandım çünkü en büyük olmasını istediğim başlık bu.-->
 
     <h3>Hakkımda</h3> 
     <p>Merhaba, ben Hafsa Eskiyurt. 9. sınıf öğrencisiyim. Web geliştirme ve girişimcilikle ilgileniyorum. </p>
 
-    <h2>Sevdiğim Kitaplar</h2>
-    <h4>Martin Eden</h4> <!--H4 kullandım çünkü sevdiğim kitaplar başlığıyla aynı büyüklükte olsun istemiyorum-->
-    <p>Jack London tarafından yazılmış, sınıflar arası farklılıkları, ayrımcılıkları ve sosyal hayatı anlatan bir kitap.</p> <!--Paragraf eklemek için <p> etiketini kullandım-->
-
-    <p>Bu kitap çok güzel bir başarı hikayesi aslında. Ana karakter Martin Eden, ne yaşarsa yaşasın asla pes etmez ve hep daha iyisini yapmaya çalışır. Kitabın sonu asla tahmin edemeyeceğiniz şekilde bitiyor. </p>
+    <h2>İlgi Alanlarım</h2>
+    <ol>
+        <li>Dizi</li>
+            <ul>
+                <li>Merlin</li>
+                <li>Friends</li>
+                <li>
+                    <a href="https://www.imdb.com/title/tt5421602/" target="_blank">Anne with an E</a>
+                </li><!--Linki yeni bir sekmede açmak için "target" kullandım-->
+            </ul>
+        <li>Film</li>
+            <ul>
+                <li>The Pianist</li>
+                <li>
+                    <a href="https://www.imdb.com/title/tt0172495/" target="_blank">Gladiator</a>
+                </li>
+                <li>Devrim Arabaları</li>
+            </ul>
+        <li>Kitap</li>
+            <ul>
+                <li>
+                    <a href="https://www.goodreads.com/book/show/929782.Martin_Eden" target="_blank">Martin Eden</a>
+                </li>
+                <li>Simyacı</li>
+                <li>Denemeler</li>
+            </ul>
+    </ol>
+    <h2>Sevdiğim Filmler</h2>
+    <h4>GLADIATOR</h4>
+    <img src="images/gladiator.jpg" > <!--Bahsettiğim filmin resmini ekledim-->
+    <p>Yönetmenliğini Ridley Scott'ın, senaristliğini David Franzoni, John Logan ve William Nicholson'ın yaptığı 2000 yılı İngiliz–Amerikan ortak yapımı epik ve tarihsel drama temalı, DreamWorks Pictures ve Universal Pictures'ın ortaklaşa yayımladıkları bir filmdir.</p>
+    
 </body>
 </html>
