--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <h2>Sevdiğim Filmler</h2>
     <h4>GLADIATOR</h4>
     <img src="images/gladiator.jpg" > <!--Bahsettiğim filmin resmini ekledim-->
-    <p>Yönetmenliğini Ridley Scott'ın, senaristliğini David Franzoni, John Logan ve William Nicholson'ın yaptığı 2000 yılı İngiliz–Amerikan ortak yapımı epik ve tarihsel drama temalı, DreamWorks Pictures ve Universal Pictures'ın ortaklaşa yayımladıkları bir filmdir.</p>
+    <p>Yönetmenliğini Ridley Scott'ın, senaristliğini David Franzoni, John Logan ve William Nicholson'ın yaptığı 2000 yılı İngiliz–Amerikan ortak yapımı 
+        epik ve tarihsel drama temalı, DreamWorks Pictures ve Universal Pictures'ın ortaklaşa yayımladıkları bir filmdir.</p>
     
 </body>
 </html>
